// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders correctly with class 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-64" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with disabled 1`] = `
<div>
  <span aria-disabled="true" class="cursor-not-allowed flex items-center opacity-75 relative select-none touch-none w-full" data-disabled data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-disabled data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-disabled data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-not-allowed focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-disabled data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with id 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="volume">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with min and max 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="50" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with size lg 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2.5 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-5" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with size md 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with size sm 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-1.5 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-3" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with step 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with tooltip 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-grace-area-trigger data-orientation="horizontal" data-reka-collection-item data-slot="thumb" data-state="closed" disable-closing-trigger role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly with ui 1`] = `
<div>
  <span aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
    <span class="bg-red-500 grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
      <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
    </span>
    <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
  </span>
</div>
`;

exports[`Slider > renders correctly within FormField 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
        <span class="text-muted" data-slot="hint" id="v-0-hint">Hint</span>
      </div>
      <p class="text-muted" data-slot="description" id="v-0-description">Description</p>
    </div>
    <div class="mt-1" data-slot="container">
      <span aria-describedby="v-0-hint v-0-description v-0-help" aria-disabled="false" class="flex items-center relative select-none touch-none w-full" data-orientation="horizontal" data-slider-impl data-slot="root" dir="ltr" id="v-0">
        <span class="bg-accented grow h-2 overflow-hidden relative rounded-full" data-orientation="horizontal" data-slot="track">
          <span class="absolute bg-primary h-full rounded-full" data-orientation="horizontal" data-slot="range"></span>
        </span>
        <span aria-label="Thumb" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="bg-default block cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary ring-2 ring-primary rounded-full size-4" data-orientation="horizontal" data-reka-collection-item data-slot="thumb" role="slider" tabindex="0"></span>
      </span>
      <p class="mt-1 text-muted" data-slot="help" id="v-0-help">Help</p>
    </div>
  </div>
</div>
`;
